# solana-chunk-loader

./: .gitignore  Anchor.toml  Cargo.toml  README.md  bun.lockb  package.json  tsconfig.json
helpers/: chunkLoader.ts  utils.ts
programs/chunk-loader/: Cargo.toml
programs/chunk-loader/src/: error.rs  lib.rs  state.rs  utils.rs
programs/chunk-loader/src/instructions/: close_chunks.rs  load_chunk.rs  mod.rs  pass_to_cpi.rs
tests/: chunkLoader.test.ts
ts-sdk/: .gitignore  package.json  tsconfig.json
ts-sdk/src/: index.ts  utils.ts
ts-sdk/src/idl/: chunk_loader.json  chunk_loader.ts
