[package]
name = "chunk-loader"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chunk_loader"

[features]
default = ["no-idl"]
anchor-debug = ["anchor-lang/anchor-debug"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
solana-invoke = "0.2"
