[package]
authors = ["lincot <lincot@disroot.org>"]
description = "Utility Solana program to send instruction data by chunks"
edition = "2021"
keywords = ["blockchain", "solana"]
license = "MIT"
name = "solana-chunk-loader"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "chunk_loader"

[features]
default = ["no-idl"]
anchor-debug = ["anchor-lang/anchor-debug"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
solana-invoke = "0.2"
solana-security-txt = "1.1.1"
